--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ cyw43-pio = { version = "0.2.0", features = ["defmt"] }
 defmt = "0.3"
 defmt-rtt = "0.4"
 embassy-executor = { version = "0.6.1", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
-embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4"] }
+embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "dhcpv4-hostname"] }
 embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
 embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
 embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
