--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ defmt-rtt = "0.4"
 embassy-executor = { version = "0.6.1", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
 embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "dhcpv4-hostname"] }
 embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
+embassy-sync = "0.5.0"
 embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
 embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
 log = "0.4"
@@ -30,8 +31,9 @@ byte-slice-cast = { version = "1.2.0", default-features = false }
 smart-leds = "0.4.0"
 heapless = "0.8"
 usbd-hid = "0.8.1"
-static_cell = "2.1"
+static_cell = { version = "2.1", features = ["nightly"] }
 portable-atomic = { version = "1.5", features = ["critical-section"] }
+picoserve = {version = "0.12.2", features = ["embassy", "defmt"] }
 
 
 [profile.release]
@@ -50,5 +52,7 @@ embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "f55eb
 embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }
 embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }
 embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }
+embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }
 cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }
 cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }
+picoserve = { git = "https://github.com/bozzzzo/picoserve.git", rev = "449af766976f6595a76107634adb58caeb9f7827" }
